--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Portfolio</title>
+	<meta name="keywords" content="杭州童泽网络科技有限公司" />
+	<meta name="description" content="杭州童泽网络科技有限公司 是一家技术开发、技术服务、技术咨询、成果转让公司。主要经营技术开发、技术服务、技术咨询、成果转让：计算机软硬件、计算机网络技术、多媒体技术、计算机数据处理技术、计算机系统集成技术。" />
+	<title>杭州童泽网络科技有限公司-Portfolio</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/core.css">
 	<link rel="stylesheet" href="css/porfolio.css">
