修改一些东西

--- a/about.html
+++ b/about.html
@@ -16,15 +16,15 @@
 				<span class="flat">Flat</span><span class="lab">Lab</span>
 			</a>
 			<ul>
-				<li class="anchor"><a href="#">Home</a></li>
-				<li class="anchor"><a href="#">About</a></li>
-				<li class="anchor"><a href="#">Service</a></li>
-				<li class="anchor"><a href="#">Feature</a></li>
-				<li class="anchor"><a href="#">Portfollo</a></li>
-				<li class="anchor"><a href="#">Price</a></li>
-				<li class="anchor"><a href="#">Blog</a></li>
-				<li class="anchor"><a href="#">Contact</a></li>
-				<li class="search"><a href=""><img src="./images/aboutIcon1.png"></a></li>
+					<li class="anchor"><a href="index.html">Home</a></li>
+					<li class="anchor"><a href="about.html">About</a></li>
+					<li class="anchor"><a href="service.html">Service</a></li>
+					<li class="anchor"><a href="Feature.html">Feature</a></li>
+					<li class="anchor"><a href="portfolio.html">Portfollo</a></li>
+					<li class="anchor"><a href="price.html">Price</a></li>
+					<li class="anchor"><a href="blog.html">Blog</a></li>
+					<li class="anchor"><a href="Contact.html">Contact</a></li>
+					<li class="search"><a href=""><img src="./images/aboutIcon1.png"></a></li>
 			</ul>
 		</div>
 	</div>
